<resources>
    <string name="app_name">LagTutor App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LagTutor Android App</string>
    <string name="nav_header_subtitle">https://lagtutor.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_utme">UTME</string>
    <string name="menu_foundation">Foundation</string>
    <string name="menu_mba">Unilag MBA</string>
    <string name="menu_past_questions">Past Questions</string>
    <string name="menu_about">About</string>
    <string name="menu_cbt">CBT</string>
    <string name="menu_caseray_solutions">Caseray Solutions</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="chose_camera">You chose Camera Import.</string>
    <string name="chose_home">You chose Home.</string>
    <string name="chose_gallery">You chose the Gallery.</string>
    <string name="chose_slideshow">You chose the Slideshow.</string>
    <string name="chose_tools">You chose Tools.</string>
    <string name="chose_share">You chose Share.</string>
    <string name="chose_send">You chose Send.</string>
    <string name="share_text">Share Text</string>
    <string name="share_text_with">Share Text With</string>
    <string name="past_questions_label">Past Questions</string>
    <string name="admission_requirements_name">Unilag Admission Requirements</string>
    <string name="text_header">Message Received</string>
    <string name="admission_requirements">Specific Admission Requirements</string>
    <string name="all_faculties">All Faculties
    </string>
    <string name="faculty_arts">Faculty of Arts</string>
    <string name="faculty_cli_sci">Faculty of Clinical Sciences</string>
    <string name="faculty_edu">Faculty of Education</string>
    <string name="faculty_eng">Faculty of Engineering</string>
    <string name="faculty_env_sci">Faculty of Environmental Sciences</string>
    <string name="faculty_law">Faculty of Law</string>
    <string name="faculty_pharm">Faculty of Pharmacy</string>
    <string name="faculty_sci">Faculty of Science</string>
    <string name="faculty_soc_sci">Faculty of Social Science</string>
    <string name="unilag_admission_requirements">Unilag Admission Requirements</string>
    <string name="useful_resources">Useful Resources</string>
    <string name="faculty_of_basic_medical_sciences">Faculty of Basic Medical Sciences</string>
    <string name="faculty_of_business_administration">Faculty of Business Administration</string>
    <string name="about_app">About App</string>
    <string name="contact_us">Contact Us</string>
    <string name="cutoff_marks">Cut-off Marks</string>
    <string name="unilag_cutoff_marks">
        <b>Unilag Cut-off marks</b>\n\n
We have a database of the Unilag cut-off marks from 2011 - 2019 on our website.
Knowledge of the cut-off marks will help you as you work towards meeting the admission requirements for your chosen course.\n\n
The cut-off marks are an indication of how competitive the courses are and its knowledge will let you know what scores you need for the respective courses on offer.\n\n
You can see the Unilag cut-off marks from 2011 - 2019 at https://LagTutor.com/unilag-cutoffs.php .\n
    </string>
    <string name="online_cutoff_marks">Online Cutoff Marks</string>
    <string name="unilag_cutoffs_2011_2019">Unilag Cutoffs 2011 – 2019</string>
    <string name="know_your_utme_target">Know Your UTME Target</string>
    <string name="calculate_your_o_level_aggregate">Calculate Your O-level Aggregate</string>
    <string name="home_tutoring">Home Tutoring</string>
    <string name="contact_caseray_solutions">Contact Caseray Solutions</string>
    <string name="caseray_solutions_content">Caseray Solutions Limited are the technology providers of the https://LagTutor.com project.
We offer digital technology solutions to persons, organisations, schools and businesses. Our services are:\n\n
i) Website design and development (corporate, e-commerce, blog);\n\n
ii) Digital marketing (on Google, Facebook, LinkedIn);\n\n
iii) HTML newsletters;\n\n
iv) Mobile apps for android;\n\n
v) Database design and development;\n\n
vi) Cloud computing services (Google Cloud Platform);\n\n
vii) E-learning solutions;\n\n
viii) Online registration;\n\n
ix) IT training services and consultancy.\n\n

You can see more on our websites at https://caseray.com.ng and https://caseraysolutions.com. \n
</string>
    <string name="share_this_app">Share This App</string>
    <string name="past_questions">Past Questions</string>
    <string name="utme">UTME</string>
    <string name="contact">Contact</string>
    <string name="unilag_mba">Unilag MBA</string>
    <string name="take_online_test">Take Online Test</string>
    <string name="hit_your_target">Hit your target</string>
    <string name="unilag_mba_content">
<b>Requirements for the University of Lagos MBA Programme, Fees and Duration </b>\n\n

University of Lagos (Unilag) Masters of Business administration (MBA) attracts students from diverse social, cultural and academic backgrounds and prepares them for higher positions in management through the use of appropriate teaching aids, business games, class room lectures and case studies. The Unilag MBA programme a professional programme for students. Students who have earned degrees (BSc, BA, M
Sc., M. ed, HND, etc) are eligible to apply. \n\n

Entrance Requirements \n\n
There are three types of Unilag MBA Programmes;\n
1) Full time (Morning); \n
2) Part-time (Evening); and \n
3) Executive (Weekends). \n\n


1. Unilag MBA Full Time (Morning Programme): \n
Graduates in any discipline (degree only) from a recognized university or holders of professional qualifications approved by senate may apply for admission. Professional qualification such as: ACA, ACIA, ACIS or ACIB are an added advantage.\n
Duration: 15 months. \n\n

Cost: 250, 000 naira excluding acceptance fees of 64,500 naira. \n\n


2. Unilag MBA Part Time (Evening Programme): \n\n
In addition to the requirement of full time above, candidates should have a minimum of three years of post-graduation work experience in managerial positions and should be in full time employment. Notwithstanding the above, any candidates may be required, on admission, to make up for any deficiency. Candidates may be required to undergo an additional selection process. \n\n

Duration: 24 months \n\n

Cost: 450, 000 naira payable in two installments. Also excludes acceptance fee of 61,500 naira. \n\n

3. Unilag MBA Executive(Weekends) \n\n
In addition to the requirements above, applicants should have at least seven (7) years post qualification working experience at a managerial position. \n\n

Duration: 24 Months \n\n


Cost: 1,800,000 naira payable in installments excluding acceptance fees of 61,500 naira. \n\n

<b>Note: UNILAG MBA accepts 3rd Class Students.</b>\n\n

The Unilag MBA entrance exam consists of multiple choice questions in English Language, Mathematics, Quantitative Reasoning, Critical Thinking and Verbal Aptitude. The exam is a computer based test (CBT). \n\n

We have past questions and answers that can help you prepare for success in the Unilag MBA entrance exam. Call or WhatsApp 08092327228.



    </string>
    <string name="caseray_solutions_services">Caseray Solutions Services</string>
</resources>