<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdmissionRequirements">

    <TextView
        android:id="@+id/text_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_regular"
        android:text="@string/admission_requirements"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        style="@style/StandardFont.Bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/all_faculties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/all_faculties"
                style="@style/StandardFont" />

            <Button
                android:id="@+id/button_fac_arts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/faculty_arts"
                android:onClick="launchCourseRequirements" />

            <Button
                android:id="@+id/button_basic_med_sci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/faculty_of_basic_medical_sciences"
                android:onClick="launchBasicMedSciCourseRequirements" />

            <Button
                android:id="@+id/button_fac_biz_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/faculty_of_business_administration"
                android:onClick="launchBizAdCourseRequirements" />

            <Button
                android:id="@+id/button_faculty_of_clinical_sciences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/faculty_cli_sci"
                android:onClick="launchClinicalSciencesCourseRequirements" />

            <Button
                android:id="@+id/button_faculty_of_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/faculty_edu"
                android:onClick="launchEducationCourseRequirements" />

            <Button
                android:id="@+id/button_faculty_of_engineering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/faculty_eng"
                android:onClick="launchEngineeringCourseRequirements" />

            <Button
                android:id="@+id/button_faculty_of_environmental_sciences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/faculty_env_sci"
                android:onClick="launchEnvironmentalScienceCourseRequirements" />

            <Button
                android:id="@+id/button_faculty_of_law"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/faculty_law"
                android:onClick="launchLawCourseRequirements" />

            <Button
                android:id="@+id/button_faculty_of_pharmacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/faculty_pharm"
                android:onClick="launchPharmacyCourseRequirements" />

            <Button
                android:id="@+id/button_faculty_of_science"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/faculty_sci"
                android:onClick="launchScienceCourseRequirements" />

            <Button
                android:id="@+id/button_faculty_of_social_science"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/faculty_soc_sci"
                android:onClick="launchSocialScienceCourseRequirements" />





        </LinearLayout>
    </ScrollView>

</RelativeLayout>